--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,7 @@
+## uuid
+
+
+
 # request url : http://www.itpk.cn/robot.php
 it.pk.api_key=db0631964c43820676aaea3b1baaf05f
 it.pk.api_secret=cx8som07fey2
